--- a/app/src/main/res/layout/item_nasa_image.xml
+++ b/app/src/main/res/layout/item_nasa_image.xml
@@ -13,26 +13,31 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="140dp">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/nasaTitle"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="16dp"
                 android:text="TextView"
+                android:textAlignment="center"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.47"
+                app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.589" />
+                app:layout_constraintTop_toBottomOf="@+id/nasaImage"
+                app:layout_constraintVertical_bias="0.0" />
 
             <ImageView
                 android:id="@+id/nasaImage"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:scaleType="fitCenter"
-                app:layout_constraintBottom_toTopOf="@+id/nasaTitle"
+                android:layout_marginTop="5dp"
+                android:scaleType="centerInside"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
