--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -17,16 +17,14 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/abductmania_background" />
 
-    <TextView
-        android:id="@+id/AbductManiaTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ABDUCTMANIA :)"
-        android:textColor="#8BC34A"
-        android:textSize="34sp"
+    <ImageView
+        android:id="@+id/title"
+        android:layout_width="346dp"
+        android:layout_height="462dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.31" />
+        app:layout_constraintVertical_bias="0.39"
+        app:srcCompat="@drawable/abductmania_title" />
 </androidx.constraintlayout.widget.ConstraintLayout>
