--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,7 +46,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.41000003"
         app:passwordToggleTint="@color/green_strong"
-        app:startIconDrawable="@drawable/ic_baseline_person_24"
+        app:startIconDrawable="@drawable/ic_baseline_email_24"
         app:startIconTint="@color/green_strong">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -56,7 +56,7 @@
             android:paddingLeft="32px"
             android:paddingRight="32px"
             android:textColor="@color/green_strong"
-            android:textCursorDrawable="@color/white"/>
+            android:textCursorDrawable="@color/white" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -107,14 +107,14 @@
     <Button
         android:id="@+id/loginButton"
         style="?attr/materialButtonOutlinedStyle"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="LogIn"
         android:textColor="@color/green_soft"
         app:iconTint="@color/green_strong"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/passwordInputLayout"
-        app:layout_constraintStart_toStartOf="@+id/passwordInputLayout"
+        app:layout_constraintEnd_toEndOf="@+id/registerButton"
+        app:layout_constraintStart_toStartOf="@+id/registerButton"
         app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout"
         app:layout_constraintVertical_bias="0.04000002"
         app:rippleColor="@color/green_strong"
@@ -129,8 +129,8 @@
         android:textColor="@color/green_soft"
         app:iconTint="@color/green_strong"
         app:layout_constraintBottom_toTopOf="@+id/loadingBar"
-        app:layout_constraintEnd_toEndOf="@+id/loginButton"
-        app:layout_constraintStart_toStartOf="@+id/loginButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/loginButton"
         app:layout_constraintVertical_bias="0.25"
         app:rippleColor="@color/green_strong"
