--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -129,25 +129,46 @@
 
     <Button
         android:id="@+id/doRegisterButton"
+        style="?attr/materialButtonOutlinedStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Register"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="@color/green_soft"
+        app:iconTint="@color/green_strong"
+        app:layout_constraintBottom_toTopOf="@+id/backLoginButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout"
+        app:rippleColor="@color/green_strong"
+        app:strokeColor="@color/green_strong" />
 
     <Button
         android:id="@+id/backLoginButton"
-        android:layout_width="wrap_content"
+        style="?attr/materialButtonOutlinedStyle"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Login"
+        android:textColor="@color/green_soft"
+        app:iconTint="@color/green_strong"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/doRegisterButton"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/doRegisterButton" />
+        app:layout_constraintStart_toStartOf="@+id/doRegisterButton"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.85"
+        app:rippleColor="@color/green_strong"
+        app:strokeColor="@color/green_strong" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/background"
+        app:layout_constraintEnd_toEndOf="@+id/backLoginButton"
+        app:layout_constraintStart_toStartOf="@+id/backLoginButton"
+        app:layout_constraintTop_toBottomOf="@+id/backLoginButton" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
