--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,10 @@
     <color name="green_strong">#9CF322</color>
     <color name="purple_dark">#1F1C3B</color>
     <color name="mtrl_textinput_default_box_stroke_color">#9CF322</color>
+
+    <color name="quarks">#673AB7</color>
+    <color name="leptons">#009688</color>
+    <color name="gauge_bosons">#E91E63</color>
+    <color name="higgs">#FFC107</color>
+
 </resources>
