--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -40,9 +40,11 @@
         android:paddingLeft="128px"
         android:paddingRight="128px"
         android:textColorHint="@color/green_soft"
+        app:helperText="Required"
+        app:helperTextTextColor="@color/error_red"
         app:boxStrokeColor="@color/green_strong"
         app:hintTextColor="@color/green_strong"
-        app:layout_constraintBottom_toTopOf="@+id/uernameInputLayout"
+        app:layout_constraintBottom_toTopOf="@+id/usernameInputLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,7 +66,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/uernameInputLayout"
+        android:id="@+id/usernameInputLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="409dp"
         android:layout_height="wrap_content"
@@ -74,6 +76,8 @@
         android:paddingLeft="128px"
         android:paddingRight="128px"
         android:textColorHint="@color/green_soft"
+        app:helperText="Required"
+        app:helperTextTextColor="@color/error_red"
         app:boxStrokeColor="@color/green_strong"
         app:hintTextColor="@color/green_strong"
         app:layout_constraintBottom_toTopOf="@+id/passwordInputLayout"
@@ -107,6 +111,8 @@
         android:paddingLeft="128px"
         android:paddingRight="128px"
         android:textColorHint="@color/green_soft"
+        app:helperText="Required"
+        app:helperTextTextColor="@color/error_red"
         app:boxStrokeColor="@color/green_strong"
         app:endIconMode="password_toggle"
         app:endIconTint="@color/green_strong"
@@ -115,7 +121,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/uernameInputLayout"
+        app:layout_constraintTop_toBottomOf="@+id/usernameInputLayout"
         app:passwordToggleTint="@color/green_strong"
         app:startIconDrawable="@drawable/ic_baseline_lock_24"
         app:startIconTint="@color/green_strong"
