--- a/app/src/main/res/layout/activity_hangman_game.xml
+++ b/app/src/main/res/layout/activity_hangman_game.xml
@@ -140,7 +140,7 @@
         android:id="@+id/guesswordText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=" "
+        android:text="_______"
         android:textColor="#5CD61A"
         android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="@+id/buildingGroundImage"
@@ -148,7 +148,8 @@
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="@+id/buildingGroundImage"
         app:layout_constraintTop_toTopOf="@+id/buildingGroundImage"
-        app:layout_constraintVertical_bias="0.37" />
+        app:layout_constraintVertical_bias="0.37"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <ImageButton
         android:id="@+id/aButton"
