--- a/app/src/main/res/layout/fragment_hangman_you_lose.xml
+++ b/app/src/main/res/layout/fragment_hangman_you_lose.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/ywBackgroundImage"
+        android:id="@+id/ylBackgroundImage"
+        tools:visibility="visible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:scaleType="fitXY"
@@ -14,11 +15,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/abductmania_background"
-        tools:visibility="visible" />
+        app:srcCompat="@drawable/abductmania_background" />
 
     <ImageView
-        android:id="@+id/ywTextBoxImage"
+        android:id="@+id/ylTextBoxImage"
         android:layout_width="285dp"
         android:layout_height="494dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -26,21 +26,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.7"
-        app:srcCompat="@drawable/abductmania_youwin_text_box" />
+        app:srcCompat="@drawable/abductmania_youlose_text_box" />
 
     <ImageView
-        android:id="@+id/ywYouWinText"
-        android:layout_width="226dp"
-        android:layout_height="100dp"
-        app:layout_constraintBottom_toBottomOf="@+id/ywTextBoxImage"
-        app:layout_constraintEnd_toEndOf="@+id/ywTextBoxImage"
-        app:layout_constraintStart_toStartOf="@+id/ywTextBoxImage"
-        app:layout_constraintTop_toTopOf="@+id/ywTextBoxImage"
-        app:layout_constraintVertical_bias="0.13"
-        app:srcCompat="@drawable/abductmania_youwin_text" />
-
-    <ImageView
-        android:id="@+id/ywUfosImage"
+        android:id="@+id/ylUfosImage"
         android:layout_width="334dp"
         android:layout_height="313dp"
         app:layout_constraintBottom_toBottomOf="@+id/ywYouWinText"
@@ -48,65 +37,65 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/abductmania_youwin_ufos" />
+        app:srcCompat="@drawable/abductmania_youlose_ufos" />
 
     <TextView
-        android:id="@+id/ywScoreTextText"
+        android:id="@+id/ylScoreTextText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Score:"
         android:textAlignment="center"
         android:textColor="#8BC34A"
         android:textSize="34sp"
-        app:layout_constraintBottom_toBottomOf="@+id/ywTextBoxImage"
-        app:layout_constraintEnd_toEndOf="@+id/ywTextBoxImage"
-        app:layout_constraintStart_toStartOf="@+id/ywTextBoxImage"
-        app:layout_constraintTop_toBottomOf="@+id/ywYouWinText"
+        app:layout_constraintBottom_toBottomOf="@+id/ylTextBoxImage"
+        app:layout_constraintEnd_toEndOf="@+id/ylTextBoxImage"
+        app:layout_constraintStart_toStartOf="@+id/ylTextBoxImage"
+        app:layout_constraintTop_toBottomOf="@+id/ylYouLoseText"
         app:layout_constraintVertical_bias="0.060000002" />
 
     <TextView
-        android:id="@+id/ywScoreText"
+        android:id="@+id/ylScoreText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="234"
         android:textAlignment="center"
         android:textColor="#8BC34A"
         android:textSize="34sp"
-        app:layout_constraintBottom_toBottomOf="@+id/ywTextBoxImage"
-        app:layout_constraintEnd_toEndOf="@+id/ywTextBoxImage"
-        app:layout_constraintStart_toStartOf="@+id/ywTextBoxImage"
-        app:layout_constraintTop_toBottomOf="@+id/ywScoreTextText"
+        app:layout_constraintBottom_toBottomOf="@+id/ylTextBoxImage"
+        app:layout_constraintEnd_toEndOf="@+id/ylTextBoxImage"
+        app:layout_constraintStart_toStartOf="@+id/ylTextBoxImage"
+        app:layout_constraintTop_toBottomOf="@+id/ylScoreTextText"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/ywYouGuessedCorrectlyText"
+        android:id="@+id/ylTheWordWasText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="You guessed correctly:"
-        android:textColor="#8BC34A"
+        android:text="The word was:"
+        android:textColor="#A40845"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/ywTextBoxImage"
-        app:layout_constraintEnd_toEndOf="@+id/ywTextBoxImage"
-        app:layout_constraintStart_toStartOf="@+id/ywTextBoxImage"
-        app:layout_constraintTop_toBottomOf="@+id/ywScoreText"
+        app:layout_constraintBottom_toBottomOf="@+id/ylTextBoxImage"
+        app:layout_constraintEnd_toEndOf="@+id/ylTextBoxImage"
+        app:layout_constraintStart_toStartOf="@+id/ylTextBoxImage"
+        app:layout_constraintTop_toBottomOf="@+id/ylScoreText"
         app:layout_constraintVertical_bias="0.110000014" />
 
     <TextView
-        android:id="@+id/ywHangmanWordText"
+        android:id="@+id/ylHangmanWordText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="veryweirdword"
         android:textAlignment="center"
-        android:textColor="#8BC34A"
+        android:textColor="#A50845"
         android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/ywTextBoxImage"
-        app:layout_constraintEnd_toEndOf="@+id/ywTextBoxImage"
-        app:layout_constraintStart_toStartOf="@+id/ywTextBoxImage"
-        app:layout_constraintTop_toBottomOf="@+id/ywYouGuessedCorrectlyText"
+        app:layout_constraintBottom_toBottomOf="@+id/ylTextBoxImage"
+        app:layout_constraintEnd_toEndOf="@+id/ylTextBoxImage"
+        app:layout_constraintStart_toStartOf="@+id/ylTextBoxImage"
+        app:layout_constraintTop_toBottomOf="@+id/ylTheWordWasText"
         app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
-        android:id="@+id/ywReplayIcon"
+        android:id="@+id/ylReplayIcon"
         android:layout_width="90dp"
         android:layout_height="90dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -118,7 +107,7 @@
         app:srcCompat="@drawable/abductmania_button_replay" />
 
     <ImageView
-        android:id="@+id/ywHomeIcon"
+        android:id="@+id/ylHomeIcon"
         android:layout_width="90dp"
         android:layout_height="90dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -129,4 +118,14 @@
         app:layout_constraintVertical_bias="0.9"
         app:srcCompat="@drawable/abductmania_button_home" />
 
+    <ImageView
+        android:id="@+id/ylYouLoseText"
+        android:layout_width="241dp"
+        android:layout_height="118dp"
+        app:layout_constraintBottom_toBottomOf="@+id/ylTextBoxImage"
+        app:layout_constraintEnd_toEndOf="@+id/ylTextBoxImage"
+        app:layout_constraintStart_toStartOf="@+id/ylTextBoxImage"
+        app:layout_constraintTop_toTopOf="@+id/ylTextBoxImage"
+        app:layout_constraintVertical_bias="0.13"
+        app:srcCompat="@drawable/abductmania_youlose_text" />
 </androidx.constraintlayout.widget.ConstraintLayout>
